--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,14 @@
   },
   "require-dev": {
     "fakerphp/faker": "^1.23.0",
+    "laravel/breeze": "^1.23",
     "laravel/pint": "^1.10.5",
     "laravel/sail": "^1.23.1",
     "mockery/mockery": "^1.6.5",
     "nunomaduro/collision": "^7.8.1",
     "nunomaduro/larastan": "^2.6",
-    "pestphp/pest": "^2.12.2",
-    "pestphp/pest-plugin-laravel": "^2.1",
+    "pestphp/pest": "^2.0",
+    "pestphp/pest-plugin-laravel": "^2.0",
     "roave/security-advisories": "dev-latest",
     "spatie/laravel-ignition": "^2.2"
   },
